fdo#32664 Keyboard volume keys don't work when LibreOffice is in focus

The volume and media control keys on a keyboard will now properly controll
external media programs while a LibreOffice window is in focus,
unless that window is a running presentation.

Change-Id: I62488922e7381dc3e44fff8f9bf8cb8fa5206f21